<resources>
    <string name="app_name">Find Lost Phone</string>
    <string name="image_telling">Image telling</string>
    <string name="lock_phone_via_sms">Lock phone via Sms</string>
    <string name="ring_silent_phone">Ring silent phone</string>
    <string name="get_phone_current_location">Phone  location</string>
    <string name="antitheft_security">Anti theft security</string>

    <string name="drawer_open">Open navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_lock_phone_via_sms">Lock Phone Via Sms</string>
    <string name="enable_lock_sim_feature">By enabling the following features,
        you can remotely lock your phone by below command via sms from any other phone</string>
    <string name="enable_ring_silent_phone_feature">By enabling the following features,
        you can remotely ring your silent phone by sending below command
        via sms from any other phone</string>
    <string name="enable_location_phone_feature">By enabling the following features,
        you can remotely get phone by sending below command
        via sms from any other phone</string>


    <string name="enable">Enable</string>
    <string name="secret_command">Secret Command :</string>
    <string name="lock_code">Lock Code :</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="lockmyphone">lockmyphone</string>
    <string name="_12345">12345</string>
    <string name="ringmyphone">ringmyphone</string>
    <string name="getphonelocation">getphoneLocation</string>
    <string name="enter_trusted_contact_1">Enter Trusted contact # 1</string>
    <string name="enter_trusted_contact_2">Enter Trusted contact # 2</string>
    <string name="custom_msg_for_friend">Hey ,I am ____,my phone has been stolen by number sending this message.Do not reply it,and contact me via other source ASAP</string>
    <string name="lost_phone_admin">Lost Phone Admin</string>
    <string name="extra_explanation_admin_rights">Please Activate these permissions to lock screen via SMS.These are necessary</string>
    <string name="i_am_here_buddy">I am here Buddy</string>
    <string name="improve_location_accuracy">Improve your location accuracy</string>
    <string name="ensure_location_service">To ensure you get the most accurate location possible,turn on all of your location services</string>
    <string name="settings">Settings</string>
    <string name="sms_phonestate_and_location_rationale">Please give us these permission so app work properly</string>
    <string name="with_out_this_request">Please give us these permission ,With out this permission this feature will not work</string>
    <string name="phone_location">Phone Location</string>
    <string name="anti_theft_security">Anti Theft Security</string>
    <string name="add_unit_interstial">ca-app-pub-1309719266805490/4921952913</string>
    <string name="add_unit_native_small">ca-app-pub-1309719266805490/7072531584</string>
    <string name="add_unit_bannar">ca-app-pub-1309719266805490/7678202090</string>
    <string name="recommended">Recommended</string>
    <string name="msg_secret_command">Send this secret command to lock the phone</string>
    <string name="ok">Ok</string>
    <string name="msg_lock_code">This will be the lock code when you sent the secret command</string>
    <string name="msg_ring_silent_phone">Send this Secret Command to Ring the silent phone</string>
    <string name="msg_current_location">Send this secret Command to get the current location of Phone</string>
    <string name="msg_anti_theft">This will be the lock code when some one tries to change the sim</string>
    <string name="help">Help</string>


</resources>
