<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgIntro"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/image_telling"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_instruction" />

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:id="@+id/firstSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txtLockPhoneViaSms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher_round"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/lock_phone_via_sms"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtRingSilentPhone"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher_round"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/ring_silent_phone"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:id="@+id/SecondSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/txtGetLocation"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher_round"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/get_phone_current_location"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAntiTheftSecurity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher_round"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/antitheft_security"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

